Fixed low contrasting colors

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -32,7 +32,7 @@ button:disabled {
 .subtitle {
     margin: 0 $s-size 25px $s-size;
     text-align: right;
-    color: #90D5EE;
+    color: darken($blue-med,15%);
     font-size: 40px;
     border-bottom: solid 2px #90D5EE;
     padding: $s-size 0;
