--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -6,13 +6,14 @@
 }
 
 .contact-body {
-    background-color: lighten($purple-light, 12%);
+    background-color: lighten($purple-light, 20%);
+    color: darken($purple-light, 20%);
     padding: 1rem 0;
     position: relative;
     text-align: center;
 
     span {
         font-weight: 500;
-        color: $purple-light;
+        color: darken($purple-light, 20%);
     }
 }
